# GraphicsCourse-SimpleRaytracer-C

./: README.md
Lab3-Stereographic/: CMakeLists.txt  Materials.h  Raytracer.cpp  Raytracer.h  Sphere.cpp  Texture.cpp  main.cpp
RT1-Spheres/: CMakeLists.txt  Lib.cpp  Materials.cpp  Materials.h  Raytracer.cpp  Raytracer.h  Sphere.cpp  Sphere.h  main.cpp
RT2-PhongModel/: CMakeLists.txt  Intersect.cpp  Intersect.h  Lib.cpp  Lib.h  Light.cpp  Materials.h  Raytracer.cpp  Raytracer.h  Sphere.cpp  Sphere.h  main.cpp
